--- a/frontend/static/css/website.css
+++ b/frontend/static/css/website.css
@@ -1,13 +1,9 @@
 * {
-    font-family: Georgia, serif;
-    margin: 0;
-    padding: 0;
+  font-family: Georgia, serif;
+  margin: 0;
+  padding: 0;
 }
 
 html, body {
-    min-height: 100%;
-}
-
-.blacktext {
-    color: black;
+  min-height: 100%;
 }
